# worker

./: .env.example  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  main.yml
scripts/: entrypoint.sh  wait-for-it.sh
src/azuraforge_worker/: __init__.py  callbacks.py  celery_app.py  database.py  main.py
src/azuraforge_worker/tasks/: training_tasks.py
