# worker/pyproject.toml

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azuraforge-worker"
version = "0.1.1"
description = "The Celery worker for the AzuraForge Platform. Discovers and runs pipeline plugins."
requires-python = ">=3.10"
dependencies = [
    # Eklentiler buradan kaldırıldı, requirements.txt'ye taşındı.
    "celery[redis]",
    "pyyaml",
    "SQLAlchemy",
    "psycopg2-binary",
    "python-semantic-release"
]

[project.scripts]
start-worker = "azuraforge_worker.main:run_azuraforge_worker"

[tool.semantic_release]
branch = "main"
version_variable = "pyproject.toml:project.version"
upload_to_pypi = false
major_on_zero = false
changelog_file = "CHANGELOG.md"