# worker/pyproject.toml

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azuraforge-worker"
version = "0.1.1"
description = "The Celery worker for the AzuraForge Platform. Discovers and runs pipeline plugins."
requires-python = ">=3.10"
dependencies = [
    # Eklentiler buraya geri eklendi:
    "azuraforge-app-stock-predictor @ git+https://github.com/AzuraForge/app-stock-predictor.git@main",
    "azuraforge-app-weather-forecaster @ git+https://github.com/AzuraForge/app-weather-forecaster.git@main",
    
    # Diğer temel bağımlılıklar:
    "celery[redis]",
    "pyyaml",
    "SQLAlchemy",
    "psycopg2-binary",
    "python-semantic-release"
]

[project.scripts]
start-worker = "azuraforge_worker.main:run_azuraforge_worker"

[tool.semantic_release]
branch = "main"
version_variable = "pyproject.toml:project.version"
upload_to_pypi = false
major_on_zero = false
changelog_file = "CHANGELOG.md"